--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
 		<li><a href="https://kourainmod.blogspot.com/">Website</a></li>
 		<li><a href="https://www.youtube.com/@VBTeamKourain">Youtube</a></li>
 	</ul>
+	<h1>About Us</h1>
+	<p>Chỉ đơn giản là 2 đứa ế thích làm mod liên quân</p>
 	<p>Liên Hệ Công Việc 0354711495</p>
 	<p class="Copyright">@Copyright 2023 Kourain, Make By Kourain</p>
 </body>
