--- a/index.html
+++ b/index.html
@@ -85,6 +85,27 @@
 			text-align: center;
 			color: #fff;
 		}
+
+		/* Thay đổi giao diện cho điện thoại di động */
+		@media (max-width: 480px) {
+			header > img {
+				width: 6em;
+				height: 6em;
+			}
+			header > h1 {
+				font-size: 1em;
+			}
+			ul {
+				padding: 1em;
+			}
+			ul > li {
+				margin: 0.5em 0;
+			}
+			a {
+				font-size: 16px;
+				padding: 3px;
+			}
+		}
 	</style>
 </head>
 <body>
@@ -96,8 +117,6 @@
 		<li><a href="https://kourainmod.blogspot.com/">Website</a></li>
 		<li><a href="https://www.youtube.com/@VBTeamKourain">Youtube</a></li>
 	</ul>
-	<h1>About Us</h1>
-	<p>Chỉ đơn giản là 2 đứa ế thích làm mod liên quân</p>
 	<p>Liên Hệ Công Việc 0354711495</p>
 	<p class="Copyright">@Copyright 2023 Kourain, Make By Kourain</p>
 </body>
