--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
 			text-align: center;
 			color: #fff;
 		}
+		.ContactInfo {
+			background-color: #fff;
+			padding: 10px;
+			text-align: center;
+			color: #000;
+		}
 		.Copyright {
 			margin-top: 5px ;
 			text-align: center;
@@ -117,7 +123,9 @@
 		<li><a href="https://kourainmod.blogspot.com/">Website</a></li>
 		<li><a href="https://www.youtube.com/@VBTeamKourain">Youtube</a></li>
 	</ul>
-	<p>Liên Hệ Công Việc 0354711495</p>
-	<p class="Copyright">@Copyright 2023 Kourain, Make By Kourain</p>
+	<div class="ContactInfo">
+		<p>Liên Hệ Công Việc 0354711495</p>
+		<p class="Copyright">@Copyright 2023 Kourain, Make By Kourain</p>
+	</div>
 </body>
 </html>
