--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <head>
 	<title>Kourain Profile</title>
 	<style>
+		.contact-info .text1 {
+		  color: black;
+		}
+		
+		.contact-info .Copyright {
+		  color: black;
+		}
 		h1 {
 			color: #fff;
 		}
@@ -124,7 +131,7 @@
 		<li><a href="https://www.youtube.com/@VBTeamKourain">Youtube</a></li>
 	</ul>
 	<div class="ContactInfo">
-		<p>Liên Hệ Công Việc 0354711495</p>
+		<p class="text1">Liên Hệ Công Việc 0354711495</p>
 		<p class="Copyright">@Copyright 2023 Kourain, Make By Kourain</p>
 	</div>
 </body>
