--- a/index.html
+++ b/index.html
@@ -90,7 +90,12 @@
 		.Copyright {
 			margin-top: 5px ;
 			text-align: center;
-			color: #fff;
+			color: black;
+		}
+		.Text1 {
+			margin-top: 5px ;
+			text-align: center;
+			color: black;
 		}
 
 		/* Thay đổi giao diện cho điện thoại di động */
@@ -128,12 +133,5 @@
 		<p class="text1">Liên Hệ Công Việc 0354711495</p>
 		<p class="Copyright">@Copyright 2023 Kourain, Make By Kourain</p>
 	</div>
-	.contact-info .text1 {
-	  color: black;
-	}
-	
-	.contact-info .Copyright {
-	  color: black;
-	}
 </body>
 </html>
