--- a/index.html
+++ b/index.html
@@ -1,142 +1,57 @@
-<html>
-<head>
-	<link rel="icon" type="image/png" href=".img/logo.png">
-	<title>Kourain Profile</title>
-	<style>
-		h1 {
-			color: #fff;
-		}
-		body, html {
-			margin: 0;
-			padding: 0;
-		}
-		body {
-			background: url(./img/nen.png) no-repeat center center fixed;
-			background-size: cover;
-		}
-		img {
-			margin-top: 10px;
-			width: 120px;
-			height: 120px;
-			margin-left: 10px;
-		}
-		header {
-			margin-top: 1em;
-			text-align: center;
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-		}
-		header > img {
-			width: 9em;
-			height: 9em;
-			border-radius: 125%;
-			border: 2px solid #fff;
-			box-shadow: red 0px 2px 8px 0px; 
-		}
-		header > h1 {
-			display: inline-block;
-			font-size: 1.2em;
-			font-weight: bold;
-			border-radius: 1em;
-			background-color: #000 ;
-			color: #fff;
-			padding: 0.3em 0.6em;
-			border: 2px solid #fffa;
-		}
-		ul {
-			box-sizing: border-box;
-			list-style: none;
-			margin: 0 auto;
-			padding: 2em;
-		}
-		ul > li {
-			background-color: #fffa;
-			border-radius: 1em;
-			padding: 0.5em;
-			margin: 1em 0;
-			align-items: center;
-			display: flex;
-			display: inline-block;
-		}
-		ul > li > a {
-			display: flex;
-			flex-direction: row;
-			justify-content: center;
-			align-content: center;
-			gap: 0em;
-		}
-		a {
-			color: black;
-			text-decoration: none;
-			font-size: 20px;
-			align-items: center;
-			padding: 5px;
-		}
-		ul {
-			text-align: center;
-			padding: auto;
-		}
-		p {
-			text-align: center;
-			color: #fff;
-		}
-		.ContactInfo {
-			background-color: #fff;
-			padding: 10px;
-			text-align: center;
-			color: #000;
-		}
-		.Copyright {
-			margin-top: 5px ;
-			text-align: center;
-			color: black;
-		}
-		.Text1 {
-			margin-top: 5px ;
-			text-align: center;
-			color: black;
-		}
-		@media screen and (max-width: 480px) {
-		  /* Các thuộc tính CSS áp dụng cho điện thoại */
-		  body {
-		    font-size: 18px;
-		  }
-		  header {
-		    margin-top: 2em;
-		  }
-		  img {
-		    width: 150px;
-		    height: 150px;
-		  }
-		  header > h1 {
-		    font-size: 1.5em;
-		  }
-		  ul {
-		    padding: 1em;
-		  }
-		  ul > li {
-		    margin: 0.5em 0;
-		  }
-		  a {
-		    font-size: 24px;
-		    padding: 8px;
-		  }
-		}
-	</style>
-</head>
-<body>
-	<header>
-		<img src="./img/logo.png" alt="Logo">
-		<h1>@VBTeamKourain</h1>
-	</header>
-	<ul>
-		<li><a href="https://kourainmod.blogspot.com/">Website</a></li>
-		<li><a href="https://www.youtube.com/@VBTeamKourain">Youtube</a></li>
-	</ul>
-	<div class="ContactInfo">
-		<p class="text1">Liên Hệ Công Việc 0354711495</p>
-		<p class="Copyright">@Copyright 2023 Kourain, Make By Kourain</p>
-	</div>
-</body>
-</html>
+<!-- Trong đoạn Code này, bạn có thể thay đổi các chi tiết (tên riêng của bạn, nội dung của bạn), nhưng không làm thay đổi cấu trúc cơ bản! -->
+
+<aside class="profile-card">
+
+<header>
+
+<!-- day la avatar -->
+<a href="http://laivanduc.vn">
+<img src="https://farm5.staticflickr.com/4175/34651231232_b1a413839f_o.jpg">
+</a>
+
+<!-- ten cua ban -->
+<h1>Lại Văn Đức</h1>
+
+<!-- Cong viec,nghe nghiep -->
+<h2>Web Developer</h2>
+
+</header>
+
+<!-- Gioi thieu ve ban -->
+<div class="profile-bio">
+
+<p> Tôi là một nhà phát triển web. Tôi chủ yếu làm việc với PHP, HTML, CSS, JS và WordPress trên ..<b> Internet.</b><br><br>
+Tôi cũng làm việc tốt với Photoshop, Corel Draw, After Effects và vài thứ khác.</p>
+
+</div>
+
+<!-- Lien ket mang xa hoi cua ban-->
+<ul class="profile-social-links">
+
+<!-- twitter -->
+<li>
+<a href="https://twitter.com/">
+<img src="https://farm5.staticflickr.com/4252/34651310252_2231b1385f_o.png">
+</a>
+</li>
+
+<!-- Dia chi google + cua ban -->
+<li>
+<a href="https://plus.google.com/u/0/118260931574775251745/posts">
+<img src="https://farm5.staticflickr.com/4202/34004509073_6fc761b8e1_o.png">
+</a>
+</li>
+
+<!-- Dia chi Facebook cua ban-->
+<li>
+<a href="https://facebook.com">
+<img src="https://farm5.staticflickr.com/4155/34774236796_cabfe4e288_o.png">
+</a>
+</li>
+
+<!-- Ban co the them hoac bot mang xa hoi tai day -->
+
+</ul>
+
+</aside>
+<!-- Chi co vay thoi !-->
