--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<body>
 		<div class="card">
 			<div class="card__img">
-				<img src="aNam.jpg" alt="" />
+				<img src="logo.png" alt="" />
 			</div>
 			<h2>Dinh Nam</h2>
 			<p>Fullstack Developer</p>
@@ -45,28 +45,6 @@
 			<p>Fullstack Developer</p>
 			<div class="card__social">
 				<a target="_black" href="https://www.facebook.com/minhthai.hoang.3">
-					<i class="fab fa-facebook-f"></i>
-				</a>
-				<a target="_black" href="https://www.youtube.com/c/Nodemy">
-					<i class="fab fa-youtube"></i>
-				</a>
-				<a target="_black" href="https://www.tiktok.com/@manindev">
-					<i class="fab fa-tiktok"></i>
-				</a>
-				<a target="_black" href="https://github.com/namndwebdev/html-css-js-thuc-chien">
-					<i class="fab fa-github"></i>
-				</a>
-			</div>
-			<button>Contact me</button>
-		</div>
-		<div class="card">
-			<div class="card__img">
-				<img src="Cuong.jpg" alt="" />
-			</div>
-			<h2>Cuong Nv</h2>
-			<p>Fullstack Developer</p>
-			<div class="card__social">
-				<a target="_black" href="https://www.facebook.com/CuongNv.2002/">
 					<i class="fab fa-facebook-f"></i>
 				</a>
 				<a target="_black" href="https://www.youtube.com/c/Nodemy">
