--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Profile Card</title>
+		<title>Kourain Profile</title>
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
@@ -19,8 +19,8 @@
 			<div class="card__img">
 				<img src="logo.png" alt="" />
 			</div>
-			<h2>Dinh Nam</h2>
-			<p>Fullstack Developer</p>
+			<h2>Developer</h2>
+			<p>Co-founder of VB Team</p>
 			<div class="card__social">
 				<a target="_black" href="https://www.facebook.com/nam.nodemy">
 					<i class="fab fa-facebook-f"></i>
@@ -41,8 +41,8 @@
 			<div class="card__img">
 				<img src="aThai.jpg" alt="" />
 			</div>
-			<h2>Minh Thai</h2>
-			<p>Fullstack Developer</p>
+			<h2>Designer</h2>
+			<p>Co-founder of VB Team</p>
 			<div class="card__social">
 				<a target="_black" href="https://www.facebook.com/minhthai.hoang.3">
 					<i class="fab fa-facebook-f"></i>
