--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<body>
 		<div class="card">
 			<div class="card__img">
-				<img src=".img/logo.png" alt="" />
+				<img src=".img/DEV_LOGO.jpg" alt="" />
 			</div>
 			<h2>Developer</h2>
 			<p>Co-founder of VB Team</p>
@@ -34,7 +34,7 @@
 		</div>
 		<div class="card">
 			<div class="card__img">
-				<img src=".img/Logo.png" alt="" />
+				<img src=".img/DES_LOGO.jpg" alt="" />
 			</div>
 			<h2>Designer</h2>
 			<p>Co-founder of VB Team</p>
