--- a/index.html
+++ b/index.html
@@ -17,36 +17,35 @@
 	<body>
 		<div class="card">
 			<div class="card__img">
-				<img src=".img/DEV_LOGO.jpg" alt="" />
+				<img src="img/DEV_LOGO.jpg" alt="" />
 			</div>
 			<h2>Developer</h2>
-			<p>Co-founder of VB Team</p>
+			<p>member of VB Team</p>
 			<div class="card__social">
-				</a>
-				<a target="_black" href="https://www.youtube.com/c/Nodemy">
+				<a target="_black" href="https://youtube.com/@VBTeamKourain">
 					<i class="fab fa-youtube"></i>
 				</a>
-				<a target="_black" href="https://github.com/namndwebdev/html-css-js-thuc-chien">
+				<a target="_black" href="https://github.com/KourainTeam">
 					<i class="fab fa-github"></i>
 				</a>
 			</div>
-			<button>Contact me</button>
+			<a href="https://kourainmod.blogspot.com/"><button>My Website</button></a>
 		</div>
 		<div class="card">
 			<div class="card__img">
-				<img src=".img/DES_LOGO.jpg" alt="" />
+				<img src="img/DES_LOGO.jpg" alt="" />
 			</div>
 			<h2>Designer</h2>
-			<p>Co-founder of VB Team</p>
+			<p>member of VB Team</p>
 			<div class="card__social">
-				<a target="_black" href="https://www.youtube.com/c/Nodemy">
+				<a target="_black" href="https://youtube.com/@VBTeamKourain">
 					<i class="fab fa-youtube"></i>
 				</a>
-				<a target="_black" href="https://github.com/namndwebdev/html-css-js-thuc-chien">
+				<a target="_black" href="https://github.com/KourainTeam">
 					<i class="fab fa-github"></i>
 				</a>
 			</div>
-			<button>Contact me</button>
+			<a href="https://kourainmod.blogspot.com/"><button>My Website</button></a>
 		</div>
 	</body>
 </html>
