--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 					<i class="fab fa-github"></i>
 				</a>
 			</div>
+			<button onclick="window.location.href='https://kourainmod.blogspot.com/'">My Website</button>
 			<a href="https://kourainmod.blogspot.com/"><button>My Website</button></a>
 		</div>
 	</body>
