--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<i class="fab fa-github"></i>
 				</a>
 			</div>
-			<a href="https://kourainmod.blogspot.com/"><button>My Website</button></a>
+			<button onclick="window.location.href='https://kourainmod.blogspot.com/'">My Website</button>
 		</div>
 		<div class="card">
 			<div class="card__img">
@@ -46,7 +46,6 @@
 				</a>
 			</div>
 			<button onclick="window.location.href='https://kourainmod.blogspot.com/'">My Website</button>
-			<a href="https://kourainmod.blogspot.com/"><button>My Website</button></a>
 		</div>
 	</body>
 </html>
