--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<body>
 		<div class="card">
 			<div class="card__img">
-				<img src="img/DEV_LOGO.jpg" alt="" />
+				<img src="img/DEV_img.jpg" alt="" />
 			</div>
 			<h2>Developer</h2>
 			<p>member of VB Team</p>
@@ -33,7 +33,7 @@
 		</div>
 		<div class="card">
 			<div class="card__img">
-				<img src="img/DES_LOGO.jpg" alt="" />
+				<img src="img/DES_img.jpg" alt="" />
 			</div>
 			<h2>Designer</h2>
 			<p>member of VB Team</p>
