--- a/index.html
+++ b/index.html
@@ -8,6 +8,34 @@
     <link rel="icon" type="image/x-icon" href="img/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css" />
+    <script>
+        function isMobileDevice() {
+            return (typeof window.orientation !== "undefined") || (navigator.userAgent.indexOf('IEMobile') !== -1);
+        }
+
+        function applyMobileStyling() {
+            var cards = document.getElementsByClassName("card");
+            for (var i = 0; i < cards.length; i++) {
+                cards[i].style.marginBottom = "20px";
+            }
+
+            var cardImages = document.getElementsByClassName("card__img");
+            for (var i = 0; i < cardImages.length; i++) {
+                cardImages[i].getElementsByTagName("img")[0].style.maxWidth = "100%";
+                cardImages[i].getElementsByTagName("img")[0].style.height = "auto";
+            }
+
+            var cardSocials = document.getElementsByClassName("card__social");
+            for (var i = 0; i < cardSocials.length; i++) {
+                cardSocials[i].style.textAlign = "center";
+            }
+        }
+        window.onload = function() {
+            if (isMobileDevice()) {
+                applyMobileStyling();
+            }
+        };
+    </script>
 </head>
 
 <body>
