--- a/index.html
+++ b/index.html
@@ -1,79 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kourain Profile</title>
-    <link rel="icon" type="image/x-icon" href="img/favicon.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css" />
+    <title>Hiển thị nội dung HTML dựa trên thiết bị truy cập</title>
     <script>
-        function isMobileDevice() {
-            return (typeof window.orientation !== "undefined") || (navigator.userAgent.indexOf('IEMobile') !== -1);
-        }
-
-        function applyMobileStyling() {
-            var cards = document.getElementsByClassName("card");
-            for (var i = 0; i < cards.length; i++) {
-                cards[i].style.marginBottom = "20px";
-            }
-
-            var cardImages = document.getElementsByClassName("card__img");
-            for (var i = 0; i < cardImages.length; i++) {
-                cardImages[i].getElementsByTagName("img")[0].style.maxWidth = "100%";
-                cardImages[i].getElementsByTagName("img")[0].style.height = "auto";
-            }
-
-            var cardSocials = document.getElementsByClassName("card__social");
-            for (var i = 0; i < cardSocials.length; i++) {
-                cardSocials[i].style.textAlign = "center";
-            }
-        }
         window.onload = function() {
-            if (isMobileDevice()) {
-                applyMobileStyling();
+            var isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
+            var iframeSrc = isMobile ? 'phone_interface.html' : 'computer_interface.html';
+            var iframe = document.getElementById('myIframe');
+            iframe.src = iframeSrc;
+
+            if (isMobile) {
+                document.body.style.overflow = 'hidden';
             }
         };
     </script>
-</head>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
 
+        #iframeWrapper {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+
+        #iframeWrapper iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
+</head>
 <body>
-    <header>
-        <img src="./img/logo.png" alt="Logo">
-        <h1>@VBTeamKourain</h1>
-    </header>
-    <div class="card">
-        <div class="card__img">
-            <img src="img/Avt_Dev.jpg" alt="" />
-        </div>
-        <h2>Developer</h2>
-        <p>member of VB Team</p>
-        <div class="card__social">
-            <a target="_black" href="https://youtube.com/@VBTeamKourain">
-                <i class="fab fa-youtube"></i>
-            </a>
-            <a target="_black" href="https://github.com/KourainTeam">
-                <i class="fab fa-github"></i>
-            </a>
-        </div>
-	<button onclick=window.location.href=https://kourainmod.blogspot.com/>My Website</button>
-    </div>
-    <div class="card">
-        <div class="card__img">
-            <img src="img/Avt_Des.jpg" alt="" />
-        </div>
-        <h2>Designer</h2>
-        <p>member of VB Team</p>
-        <div class="card__social">
-            <a target="_black" href="https://youtube.com/@VBTeamKourain">
-                <i class="fab fa-youtube"></i>
-            </a>
-            <a target="_black" href="https://github.com/KourainTeam">
-                <i class="fab fa-github"></i>
-            </a>
-        </div>
-	<button onclick=window.location.href=https://kourainmod.blogspot.com/>My Website</button>
+    <div id="iframeWrapper">
+        <iframe id="myIframe" frameborder="0" width="100%" height="100%"></iframe>
     </div>
 </body>
 </html>
