--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hiển thị nội dung HTML dựa trên thiết bị truy cập</title>
+    <title>Kourain Profile</title>
+    <link rel="icon" type="image/x-icon" href="img/favicon.png">
     <script>
         window.onload = function() {
             var isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
