--- a/phone_interface.html
+++ b/phone_interface.html
@@ -54,7 +54,7 @@
 	      </div>
 	    </div>
 	  </div>
-	  <button onclick=window.location.href="https://kourainmod.blogspot.com/">My Website</button>
+	  <button onclick="window.open('https://kourainmod.blogspot.com/', '_blank')">My Website</button>
 	</div>
 </body>
 </html>
