--- a/phone_interface.html
+++ b/phone_interface.html
@@ -11,10 +11,10 @@
 </head>
 
 <body>
-    <header>
-        <img src="./img/logo.png" alt="Logo" class="logo">
+    <div class="header">
+    	<img src="./img/logo.png" alt="Logo" class="logo">
         <h1>@VBTeamKourain</h1>
-    </header>
+    </div>>
 	<div class="card-container">
 	  <div class="card">
 	    <div class="card__img">
