--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Kourain Profile</title>
-    <link rel="icon" type="image/x-icon" href="img/favicon.png">
+    <link rel="icon" type="image/x-icon" href="img/Kourain VbTeam LogoV2.png">
     <script>
         window.onload = function() {
             var isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
