--- a/phone_interface.html
+++ b/phone_interface.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="header">
-    	<img src="./img/logo.png" alt="Logo" class="logo">
+    	<img src="./img/Kourain VbTeam LogoV2.png" alt="Logo" class="logo">
         <h1>@VBTeamKourain</h1>
     </div>>
 	<div class="card-container">
