--- a/computer_interface.html
+++ b/computer_interface.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <img src="./img/logo.png" alt="Logo">
+        <img src="./img/Kourain VbTeam LogoV2.png" alt="Logo">
         <h1>@VBTeamKourain</h1>
     </header>
     <div class="card">
