--- a/computer_interface.html
+++ b/computer_interface.html
@@ -15,36 +15,42 @@
         <img src="./img/Kourain VbTeam LogoV2.png" alt="Logo">
         <h1>@VBTeamKourain</h1>
     </header>
-    <div class="card">
-        <div class="card__img">
-            <img src="img/Avt_Dev.jpg" alt=""/>
-        </div>
-        <h2>Developer</h2>
-        <p>member of VB Team</p>
-        <div class="card__social">
-            <a target="_black" href="https://youtube.com/@VBTeamKourain">
-                <i class="fab fa-youtube"></i>
-            </a>
-            <a target="_black" href="https://github.com/KourainTeam">
-                <i class="fab fa-github"></i>
-            </a>
-        </div>
-    </div>
-    <div class="card">
-        <div class="card__img">
-            <img src="img/Avt_Des.jpg" alt=""/>
-        </div>
-        <h2>Designer</h2>
-        <p>member of VB Team</p>
-        <div class="card__social">
-            <a target="_black" href="https://youtube.com/@VBTeamKourain">
-                <i class="fab fa-youtube"></i>
-            </a>
-            <a target="_black" href="https://github.com/KourainTeam">
-                <i class="fab fa-github"></i>
-            </a>
-        </div>
-    </div>
-    <button onclick="window.open('https://kourainmod.blogspot.com/', '_blank')">My Website</button>
+	<div class="card">
+	    <div class="card__img">
+	        <img src="img/Avt_Dev.jpg" alt=""/>
+	    </div>
+	    <h2>Developer</h2>
+	    <p>member of VB Team</p>
+	    <div class="card__social">
+	        <a target="_black" href="https://youtube.com/@VBTeamKourain">
+	            <i class="fab fa-youtube"></i>
+	        </a>
+	        <a target="_black" href="https://github.com/KourainTeam">
+	            <i class="fab fa-github"></i>
+	        </a>
+	    </div>
+	    <button onclick="window.open('https://kourainmod.blogspot.com/', '_blank')">My Website</button>
+	</div>
+	<a href="https://kourainteam.github.io/heart.html" target="_blank">
+	  <div class="heart">
+	    <i class="fas fa-heart"></i>
+	  </div>
+	</a>
+	<div class="card">
+	    <div class="card__img">
+	        <img src="img/Avt_Des.jpg" alt=""/>
+	    </div>
+	    <h2>Designer</h2>
+	    <p>member of VB Team</p>
+	    <div class="card__social">
+	        <a target="_black" href="https://youtube.com/@VBTeamKourain">
+	            <i class="fab fa-youtube"></i>
+	        </a>
+	        <a target="_black" href="https://github.com/KourainTeam">
+	            <i class="fab fa-github"></i>
+	        </a>
+	    </div>
+	    <button onclick="window.open('https://kourainmod.blogspot.com/', '_blank')">My Website</button>
+	</div>
 </body>
 </html>
