--- a/computer_interface.html
+++ b/computer_interface.html
@@ -32,7 +32,7 @@
 	    <button onclick="window.open('https://kourainmod.blogspot.com/', '_blank')">My Website</button>
 	</div>
 	<a href="https://kourainteam.github.io/heart.html" target="_blank">
-	  <div class="heart">
+	  <div class="heart" style="color: #242628">
 	    <i class="fas fa-heart"></i>
 	  </div>
 	</a>
