--- a/Getkey.html
+++ b/Getkey.html
@@ -10,11 +10,7 @@
         }
 
         #iframeWrapper {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+            display: none;
         }
 
         #iframeWrapper iframe {
