--- a/Getkey.html
+++ b/Getkey.html
@@ -1,28 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Kourain Server</title>
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-        }
-
-        #iframeWrapper {
-            display: none;
-        }
-
-        #iframeWrapper iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
-    </style>
-</head>
-<body>
-    <div id="iframeWrapper">
-        <iframe src="https://kourainteam.000webhostapp.com/Getkey.php" frameborder="0" width="100%" height="100%"></iframe>
-    </div>
-</body>
-</html>
+Offset Hack
+Hex hack
+offset
+hex
