--- a/Getkey.html
+++ b/Getkey.html
@@ -1,4 +1,3 @@
-Offset Hack
-Hex hack
-offset
-hex
+885108|1718082356302|250901|query_id=AAFKoAFIAgAAAEqgAUh2HpBR&user=%7B%22id%22%3A5503033418%2C%22first_name%22%3A%22NGB%22%2C%22last_name%22%3A%22NGB%22%2C%22username%22%3A%22BaoXXXX01%22%2C%22language_code%22%3A%22en%22%2C%22allows_write_to_pm%22%3Atrue%7D&auth_date=1718082340&hash=7067f67398b235aa686c9324e9a4c80b6fc7fd65c3a553b78ed13be305d6d7b2
+645943|1718087259607|790957|query_id=AAFfBsolAwAAAF8GyiWct8mD&user=%7B%22id%22%3A7076447839%2C%22first_name%22%3A%22NGB%22%2C%22last_name%22%3A%22NGB%22%2C%22username%22%3A%22BaoXXXX02%22%2C%22language_code%22%3A%22en%22%2C%22allows_write_to_pm%22%3Atrue%7D&auth_date=1718087255&hash=6ea12e5e3f3b361230ba936dc5ae278c2f506625307d0f9ca909c4321b0ca5bf
+553169|1718087336783|111868|query_id=AAEhfu5tAgAAACF-7m0CR0Nq&user=%7B%22id%22%3A6139313697%2C%22first_name%22%3A%22%C4%90%E1%BB%A9c%22%2C%22last_name%22%3A%22D%C6%B0%C6%A1ng%22%2C%22language_code%22%3A%22en%22%2C%22allows_write_to_pm%22%3Atrue%7D&auth_date=1718087336&hash=5a5724e660edbf37da59bbd49fcc6e82e476f2d3dc3376dfdb209e7b75ce7b2a
